--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,7 @@
       <input type="text" id="txtStudent" placeholder="Ingrese alumno">
       <input type="button" id="btnSearch" value="Buscar">
       <br>
-      <table>
-        <p>Porcentaje de Progreso</p>
+      <table id="tbl-estudiantes">
         <tr>
           <th>Estudiante</th>
           <th>Ejercicios</th>
