prueba css y html

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
   <h2>Dashboard de Progreso General</h2>
   <p>Cohort:</p>
   <select id="cohortGeneral">
+    <option value="-1">Seleccione Cohorts</option>
+    <option value="lim-2018-03-pre-core-pw">lim-2018-03-pre-core-pw</option>
+    <option value="otros">otros</option>
   </select>
   <br>
   <br>
@@ -50,20 +53,7 @@
       <input type="button" id="btnSearch" value="Buscar">
       <br>
       <table id="tbl-estudiantes">
-        <tr>
-          <th>Estudiante</th>
-          <th>Ejercicios</th>
-          <th>Quiz</th>
-          <th>Lectura</th>
-          <th>Total</th>
-        </tr>
-        <tr>
-          <td>Data Alumna</td>
-          <td>Data % Ejercicios</td>
-          <td>Data % Quiz</td>
-          <td>Data % Lectura</td>
-          <td>% Total</td>
-        </tr>
+       
       </table>
     </fieldset>
   </form>
