Actualización del test

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -10,7 +9,6 @@
 </head>
 
 <body>
-  <!-- LOGO LABORATORIA -->
   <header>
     <img src="../image/logo1.png" alt="logo">
     <nav>
@@ -36,10 +34,10 @@
           <p>Curso:
             <label id="course"></label>
           </p>
-          <p>Excercises:
-            <label id="excercises-course"></label>
+          <p>Ejercicios:
+            <label id="exercises-course"></label>
           </p>
-          <p>Reads:
+          <p>Lecturas:
             <label id="reads-course"></label>
           </p>
           <p>Quizzes:
@@ -53,11 +51,11 @@
       <input type="text" id="text-search" placeholder="Ingrese alumno">
       <select id="select-order">
         <option value="-1">Ordenar por ... </option>
-        <option value="name">name</option>
-        <option value="excercises">excercises</option>
-        <option value="reads">reads</option>
-        <option value="quizzes">quizzes</option>
-        <option value="percent">percent</option>
+        <option value="name">Nombre</option>
+        <option value="exercises">Ejercicios</option>
+        <option value="reads">Lecturas</option>
+        <option value="quizzes">Quizzes</option>
+        <option value="percent">Porcentaje Total</option>
       </select>
       <select id="order-direction">
         <option value="-1">Ordenar de forma...</option>
